Generando la documentación para el api. Se establece la configuración para proteger los endpoints necesarios con JWT
